force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Job_Thread_Count__c.field-meta.xml
<CustomField>
    <fullName>loan__Job_Thread_Count__c</fullName>
    <formula>MOD(VALUE(TRIM(SUBSTITUTE(Name ,&quot;LAI-&quot;, &apos;&apos;))), $Setup.loan__Org_Parameters__c.loan__Concurrent_BatchJobs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used to determine job thread count of a Loan Record which will be picked in DAG Job</inlineHelpText>
    <label>Job Thread Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>