force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Transaction_Id__c</fullName>
    <label>Last Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>