force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Balance__c</fullName>
    <label>Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>