force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Parameters__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Parameters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Parameters for this loan contract.</description>
    <inlineHelpText>Loan Parameters for this loan contract.</inlineHelpText>
    <label>Loan Parameters</label>
    <referenceTo>loan__Loan_Parameters__c</referenceTo>
    <relationshipLabel>CL Contracts</relationshipLabel>
    <relationshipName>CL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>