force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Status__c</fullName>
    <inlineHelpText>Status of the Account expected values are :
Pending Approval
Active - Good Standing
Active - Bad Standing
Active - Matured
Approved
Canceled
Closed - Obligations met
Closed- Written Off
Closed - Refinanced
Partial Application
Closed - Premature</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active - Bad Standing</fullName>
            </value>
            <value>
                <fullName>Active - Good Standing</fullName>
            </value>
            <value>
                <fullName>Active - Marked for Closure</fullName>
            </value>
            <value>
                <fullName>Active - Matured</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed - Obligations met</fullName>
            </value>
            <value>
                <fullName>Closed - Premature</fullName>
            </value>
            <value>
                <fullName>Closed - Refinanced</fullName>
            </value>
            <value>
                <fullName>Closed- Written Off</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Partial Application</fullName>
                <default>true</default>
                <label>Partial Application</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Premature Closure Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>