force-app/main/default/objects/loan__Loan_Account__c/fields/loan__LTV__c.field-meta.xml
<CustomField>
    <fullName>loan__LTV__c</fullName>
    <description>This field depicts Loan to Value Ratio</description>
    <inlineHelpText>This field depicts Loan to Value Ratio</inlineHelpText>
    <label>Loan To Value Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>