force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Next_Due_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Due_Generation_Date__c</fullName>
    <description>Next Due Generation Date.</description>
    <inlineHelpText>This is determined by using the pre- bill days.</inlineHelpText>
    <label>Next Due Generation Date</label>
    <type>Date</type>
</CustomField>