force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>loan__Number_of_Installments__c</fullName>
    <description>Contractual Term Of the Loan Account</description>
    <inlineHelpText>Contractual term of the contract.</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>