force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Bank_Name__c</fullName>
    <description>One time ACH Bank Name</description>
    <inlineHelpText>One time ACH Bank&#39;s name</inlineHelpText>
    <label>OT ACH Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>