force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Principal Paid Account Balance Details- System calculated Uneditable fields</description>
    <inlineHelpText>Paid Principal/Advance.</inlineHelpText>
    <label>Principal/Advance Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>