force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Provision_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Provision_Amount__c</fullName>
    <description>It shows the total provision amount of the contract</description>
    <inlineHelpText>It shows the total provision amount of the contract</inlineHelpText>
    <label>Provision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>