force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Reschedule_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Reschedule_Status__c</fullName>
    <inlineHelpText>This field will be used to mark the Loans to be rescheduled when any LPT with amount higher than threshold. All such Loans will be rescheduled in EOD processing.</inlineHelpText>
    <label>Reschedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>