force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Revolving__c.field-meta.xml
<CustomField>
    <fullName>loan__Revolving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates if loan is revolving or not.</description>
    <inlineHelpText>It indicates if loan is revolving or not.</inlineHelpText>
    <label>Revolving</label>
    <type>Checkbox</type>
</CustomField>