force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Term_Cur__c.field-meta.xml
<CustomField>
    <fullName>loan__Term_Cur__c</fullName>
    <description>Current Term</description>
    <inlineHelpText>Current loan account term.</inlineHelpText>
    <label>Current Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>