force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Total_Amount_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Amount_Disbursed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the total amount disbursed including any additional costs.</description>
    <inlineHelpText>This is the total amount disbursed including any additional costs.</inlineHelpText>
    <label>Total Amount Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>