force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Transaction_Summary_Migrated_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Summary_Migrated_Till_Date__c</fullName>
    <description>It stores the date till which the loan transaction summary has been migrated .</description>
    <inlineHelpText>It stores the date till which the loan transaction summary has been migrated .</inlineHelpText>
    <label>Transaction Summary Migrated Till Date</label>
    <type>Date</type>
</CustomField>