force-app/main/default/objects/loan__Loan_Account__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>peer__Loan_Application__c</referenceTo>
    <relationshipLabel>CL Contracts</relationshipLabel>
    <relationshipName>CL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>