force-app/main/default/objects/loan__Loan_Account__c/fields/NCCP_status_list__c.field-meta.xml
<CustomField>
    <fullName>NCCP_status_list__c</fullName>
    <label>NCCP status list</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regulated</fullName>
            </value>
            <value>
                <fullName>Unregulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>