force-app/main/default/objects/loan__Loan_Account__c/fields/New_Interest_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Interest_Change_Status__c</fullName>
    <label>New Interest Change Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>