force-app/main/default/objects/loan__Loan_Account__c/fields/New_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Interest_Rate__c</fullName>
    <label>New Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>