force-app/main/default/objects/loan__Loan_Account__c/fields/New_Interest_Rate_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Interest_Rate_Effective_Date__c</fullName>
    <label>New Interest Rate Effective Date</label>
    <type>Date</type>
</CustomField>