force-app/main/default/objects/loan__Loan_Account__c/fields/Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance__c</fullName>
    <formula>IF(Statement_Start_Date__c &lt;= loan__Expected_Disbursal_Date__c,0, 123456789)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>