force-app/main/default/objects/loan__Loan_Account__c/fields/Original_Total_of_Securities__c.field-meta.xml
<CustomField>
    <fullName>Original_Total_of_Securities__c</fullName>
    <label>Original Total # of Securities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>