force-app/main/default/objects/loan__Loan_Account__c/fields/Paid_Prepaid_Interest__c.field-meta.xml
<CustomField>
    <fullName>Paid_Prepaid_Interest__c</fullName>
    <label>Paid Prepaid Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>