force-app/main/default/objects/loan__Loan_Account__c/fields/Pending_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Discharge_Date__c</fullName>
    <description>RJohnston 8/11 - for being able to report on loans that have requested a full or partial discharge 
https://wingategroup.atlassian.net/jira/software/c/projects/AMS/boards/8?modal=detail&amp;selectedIssue=AMS-900</description>
    <label>Pending Discharge Date</label>
    <type>Date</type>
</CustomField>