force-app/main/default/objects/loan__Loan_Account__c/fields/Percentage_Of_Commission__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_Commission__c</fullName>
    <label>Percentage Of Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>