force-app/main/default/objects/loan__Loan_Account__c/fields/PrePaid_Interest_Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>PrePaid_Interest_Amount_Funded__c</fullName>
    <formula>IF(Application__r.genesis__CL_Product_Name__c == &#39;Construction Development&#39; || Application__r.genesis__CL_Product_Name__c == &#39;Residential Construction&#39;, Application__r.PrePaid_Interest_Amount_Funded__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrePaid Interest Amount Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>