force-app/main/default/objects/loan__Loan_Account__c/fields/PrePaid_Interest_Remaining_for_funding__c.field-meta.xml
<CustomField>
    <fullName>PrePaid_Interest_Remaining_for_funding__c</fullName>
    <formula>IF(Application__r.genesis__CL_Product_Name__c == &apos;Construction Development&apos; || Application__r.genesis__CL_Product_Name__c == &apos;Residential Construction&apos;, Application__r.PrePaid_Interest_Remaining_for_funding__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrePaid Interest Remaining for funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>