force-app/main/default/objects/loan__Loan_Account__c/fields/Remaining_Fixed_Period__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Fixed_Period__c</fullName>
    <formula>IF(ISPICKVAL(loan__Loan_Status__c,&apos;Active - Good Standing&apos;) || ISPICKVAL(loan__Loan_Status__c,&apos;Active - Bad Standing&apos;) || ISPICKVAL(loan__Loan_Status__c,&apos;Active - Matured&apos;),(IF(ISPICKVAL(Application__r.Interest_type__c, &apos;Variable&apos;),0,(IF(ISPICKVAL(Application__r.Interest_type__c, &apos;Fixed Rate&apos;),IF(Fixed_Rate_Term__c &gt; 0 &amp;&amp; ((Fixed_Rate_Term__c - Total_no_of_generated_bills__c)&gt;0),(Fixed_Rate_Term__c - Total_no_of_generated_bills__c), 0), 0) ))), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Fixed Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>