force-app/main/default/objects/loan__Loan_Account__c/fields/Remaining_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Loan_Term__c</fullName>
    <formula>MONTH(loan__Maturity_Date_Current__c) + 12 - MONTH($User.loan__Current_Branch_s_System_Date__c)+12*(YEAR(loan__Maturity_Date_Current__c)-YEAR($User.loan__Current_Branch_s_System_Date__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>