force-app/main/default/objects/loan__Loan_Account__c/fields/Remaining_Term_from_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term_from_Schedule__c</fullName>
    <label>Remaining Term from Schedule</label>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__Is_Billed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Repayment_Schedule__c.loan__Is_Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Repayment_Schedule__c.loan__Loan_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>