force-app/main/default/objects/loan__Loan_Account__c/fields/Restrict_Redraw__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Redraw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Redraw</label>
    <type>Checkbox</type>
</CustomField>