force-app/main/default/objects/loan__Loan_Account__c/fields/Risk_LVR__c.field-meta.xml
<CustomField>
    <fullName>Risk_LVR__c</fullName>
    <label>Risk LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>