force-app/main/default/objects/loan__Loan_Account__c/fields/Scheduled_Balance_As_at_IR_change_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Balance_As_at_IR_change_date__c</fullName>
    <label>Scheduled Balance As at IR change date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>