force-app/main/default/objects/loan__Loan_Account__c/fields/Second_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Repayment_Date__c</fullName>
    <label>Second Repayment Date</label>
    <type>Date</type>
</CustomField>