force-app/main/default/objects/loan__Loan_Account__c/fields/Second_Repayment_Date_After_IR_Change__c.field-meta.xml
<CustomField>
    <fullName>Second_Repayment_Date_After_IR_Change__c</fullName>
    <label>Second Repayment Date After IR Change</label>
    <type>Date</type>
</CustomField>