force-app/main/default/objects/loan__Loan_Account__c/fields/Selected_Contact_to_Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>Selected_Contact_to_Send_Emails__c</fullName>
    <label>Selected Contact to Send Emails</label>
    <length>50</length>
    <type>Text</type>
</CustomField>