force-app/main/default/objects/loan__Loan_Account__c/fields/Send_Email_Dishonor_Notice_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Dishonor_Notice_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send  Email Dishonor Notice to Customer</label>
    <type>Checkbox</type>
</CustomField>