force-app/main/default/objects/loan__Loan_Account__c/fields/Statement_End_Date_Loan_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_End_Date_Loan_Closed_Date__c</fullName>
    <formula>IF(Statement_End_Date__c &gt; loan__Closed_Date__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statement End Date &gt; Loan Closed Date</label>
    <type>Text</type>
</CustomField>