force-app/main/default/objects/loan__Loan_Account__c/fields/Statement_Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Statement_Opening_Balance__c</fullName>
    <label>Statement Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>