force-app/main/default/objects/loan__Loan_Account__c/fields/Statement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Start_Date__c</fullName>
    <label>Statement Start Date</label>
    <type>Date</type>
</CustomField>