force-app/main/default/objects/loan__Loan_Account__c/fields/Total_Amount_Borrowed__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Borrowed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sum Of Linked Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>