force-app/main/default/objects/loan__Loan_Account__c/fields/Total_no_of_generated_bills__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_generated_bills__c</fullName>
    <label>Total no of generated bills</label>
    <summaryForeignKey>loan__Loan_account_Due_Details__c.loan__Loan_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>