force-app/main/default/objects/loan__Loan_Account__c/fields/Total_Sum_of_Financier_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_of_Financier_Exposure__c</fullName>
    <label>Total Sum of Financier Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>