force-app/main/default/objects/loan__Loan_Account__c/fields/Uncleared_Internal_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Uncleared_Internal_Transfer__c</fullName>
    <label>Uncleared Internal Transfer</label>
    <summaryFilterItems>
        <field>loan__Loan_Payment_Transaction__c.loan__Payment_Type__c</field>
        <operation>equals</operation>
        <value>Deposit Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Loan_Payment_Transaction__c.loan__Cleared__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Loan_Payment_Transaction__c.loan__Rejected__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Loan_Payment_Transaction__c.loan__Reversed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Loan_Payment_Transaction__c.loan__Loan_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>