force-app/main/default/objects/loan__Loan_Account__c/recordTypes/Borrower_ACH_Read_Only_Record.recordType-meta.xml
<RecordType>
    <fullName>Borrower_ACH_Read_Only_Record</fullName>
    <active>true</active>
    <label>Borrower ACH Read Only Record</label>
</RecordType>