force-app/main/default/objects/loan__Loan_Account__c/recordTypes/loan__Amortization_Based_Loan.recordType-meta.xml
<RecordType>
    <fullName>loan__Amortization_Based_Loan</fullName>
    <active>true</active>
    <description>Amortization Based Loan</description>
    <label>Amortization Based Loan</label>
</RecordType>