force-app/main/default/objects/loan__Loan_Account__c/recordTypes/loan__Flexible_Amz_Loan.recordType-meta.xml
<RecordType>
    <fullName>loan__Flexible_Amz_Loan</fullName>
    <active>true</active>
    <description>Flexible Amz Loan</description>
    <label>Flexible Amz Loan</label>
</RecordType>