force-app/main/default/objects/loan__Loan_Account__c/recordTypes/loan__Line_Of_Credit_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Line_Of_Credit_Record_Type</fullName>
    <active>true</active>
    <description>Line Of Credit Record Type</description>
    <label>Line Of Credit</label>
</RecordType>