force-app/main/default/objects/loan__Loan_Account__c/recordTypes/loan__Loan_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Loan_Record_Type</fullName>
    <active>true</active>
    <description>Actual Interest Based Loan</description>
    <label>Loan</label>
</RecordType>