force-app/main/default/objects/loan__Loan_Account__c/validationRules/Fixed_Rate_Term_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fixed_Rate_Term_Validation</fullName>
    <active>true</active>
    <description>Throws an error when interest rate is changed during the fixed rate term period.</description>
    <errorConditionFormula>IF(NOT( ISNULL(Fixed_Rate_Term__c) &amp;&amp; Fixed_Rate_Term__c != 0), IF((Fixed_Rate_Term__c &gt;= Total_no_of_generated_bills__c &amp;&amp; loan__Is_Rescheduled__c == true &amp;&amp; PRIORVALUE(loan__Interest_Rate__c) != loan__Interest_Rate__c	),true, false), false)</errorConditionFormula>
    <errorMessage>Interest rate cannot be changed during the fixed rate term user.</errorMessage>
</ValidationRule>