force-app/main/default/objects/loan__Loan_Account__c/validationRules/loan__Check_Group_Loan_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Group_Loan_Product</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL( loan__Loan_Product_Name__r.loan__Loan_Product_Type__c , &#39;Group&#39;),
NOT($Setup.loan__Org_Parameters__c.loan__Integrate_Salesforce_CRM__c),
ISBLANK( loan__Group__c)
),
AND(
ISPICKVAL( loan__Loan_Product_Name__r.loan__Loan_Product_Type__c , &#39;Group&#39;),
$Setup.loan__Org_Parameters__c.loan__Integrate_Salesforce_CRM__c,
ISBLANK( loan__Account__c )
)
)</errorConditionFormula>
    <errorMessage>This is an Group loan. You must specify an account.</errorMessage>
</ValidationRule>