force-app/main/default/objects/loan__Loan_Account__c/validationRules/loan__Check_Individual_Loan_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Individual_Loan_Product</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL( loan__Loan_Product_Name__r.loan__Loan_Product_Type__c , &#39;Client&#39;),
NOT($Setup.loan__Org_Parameters__c.loan__Integrate_Salesforce_CRM__c),
ISBLANK( loan__Client__c)
),
AND(
ISPICKVAL( loan__Loan_Product_Name__r.loan__Loan_Product_Type__c , &#39;Client&#39;),
$Setup.loan__Org_Parameters__c.loan__Integrate_Salesforce_CRM__c,
ISBLANK(  loan__Contact__c )
)
)</errorConditionFormula>
    <errorMessage>This is an individual loan. You must specify a contact.</errorMessage>
</ValidationRule>